feat: include listener service in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,15 @@ services:
       mode: replicated
       replicas: 1
 
+  listener-service:
+    build: 
+      context: ./listener-service
+      dockerfile: ./listener-service.dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+
   mail-service:
    build:
       context: ./mail-service
