--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ broker-service/brokerApp
 authentication-service/authApp
 logger-service/loggerApp
 mail-service/mailerApp
+listener-service/listenerApp
